# openemulator

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  COPYING  Chooser.xib  Debugger.xib  DocumentController.h  DocumentController.m  DocumentView.h  DocumentWindow.m  INSTALL.md  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.in
OpenEmulator.xcodeproj/: project.pbxproj
SDL/: main.cpp
cli/: Emulations.cpp  Emulations.h  OEGL.h  OEHID.cpp  OEHID.h  OENcurses.cpp  OENcurses.h  OEOpenGL.cpp  OEOpenGL.h  OEPA.cpp  OEPA.h  OEPAEmulation.cpp  OEPAEmulation.h  OEPortaudio.cpp  OEPortaudio.h  OEPortaudioC.h  SDLIO.cpp  SDLIO.h  SDLIOMessages.h  SDLMain.cpp  SDLMain.h  config.h  main.cpp  oegl.cpp  oegl.h  oehid.cpp  oehid.h  oepa.cpp  oepa.h  oepa_c.h
cmake/: FindPulseAudio.cmake  libdiskimage.cmake  libemulation-hal.cmake  libemulation.cmake  libutil.cmake
devices/: Apple Disk II Drive 1.xml  Apple Disk II Drive 2.xml  Apple Disk II Drive.xml  Apple Disk II Interface Card.xml  Apple Game Paddles.xml  Apple II Super Serial Card.xml  Apple Language Card.xml  Apple Monitor II.xml  Composite Monitor.xml  Epson FX-80.xml  Terminal.xml  Videx Videoterm.xml
dml/: Apple 3.5 Floppy Disk Drive Interface Card.xml  Apple Disk II.xml
dmls/: Apple Language Card.xml
doc/: DML Format Specification.rtf  DML Format Specification.txt  DML Specification.txt  DeviceList-1.0.dtd  EDL Specification.txt  OpenEmulator Icons.rtf  The QCOW2 Image Format.html  The QCOW2 Image Format.rtf  The libemulation Book.txt  UEF Format rev. 0.1.rtf  dml-1.0.dtd  edl-1.0.dtd
hardware/: Apple II Super Serial Card.xml
lib/: libdiskimage.cmake  libemulation-hal.cmake
libcomposite/: composite.c  composite.h  composite1Bit.c  composite1Bit.h  compositeCGA.c  compositeCGA.h  compositeSignalProcessing.c  compositeSignalProcessing.h  ntsc.fs
libdiskimage/: AppleBitDiskImage35.cpp  AppleBitDiskImage35.h  AppleBitDiskImage525.cpp  AppleBitDiskImage525.h  Bit2IMG.cpp  Bit2IMG.h  BitDiskImage.cpp  BitFDI.h  BitNIB.cpp  BitNIB.h  BitV2D.h  Block2IMG.cpp  Block2IMG.h  BlockDC42.cpp  BlockDC42.h  BlockData.cpp  BlockData.h  BlockDiskImage.cpp  BlockDiskImage.h  BlockQCOW2.cpp  BlockQCOW2.h  BlockRAW.cpp  BlockRAW.h  DI2IMGBackingStore.cpp  DI2IMGBackingStore.h  DIATABlockStorage.cpp  DIATABlockStorage.h  DIApple35.h  DIApple35DiskStorage.h  DIApple525.cpp  DIApple525DiskStorage.cpp  DIApple525DiskStorage.h  DIAppleBlockStorage.cpp  DIAppleBlockStorage.h  DIAppleDiskImage.cpp  DIAppleDiskImage.h  DIBackingStore.cpp  DIBackingStore.h  DIBlockStorage.cpp  DIBlockStorage.h  (+63 more)
libemulation/: Emulation.cpp  Emulation.h  Makefile.am  OEAddress.cpp  OEAddress.h  OEComponent.cpp  OEComponent.h  OEComponentFactory.cpp  OEComponentFactory.h  OEDML.cpp  OEDML.h  OEData.cpp  OEData.h  OEEDL.cpp  OEEDL.h  OEEmulation.cpp  OEEmulation.h  OEInfo.cpp  OEInfo.h  OEPackage.cpp  OEPackage.h  OERef.cpp  OERef.h  OETypes.h  ddl-1.0.dtd  edl-1.0.dtd
libemulation-hal/: HIDJoystick.cpp  HIDJoystick.h  OEMatrix3.cpp  OEMatrix3.h  OENTSCGLShader.fs  OEOpenGLCanvas.cpp  OEPortAudio.cpp  OEPortAudio.h  OEVector.cpp  OEVector.h  OpenGLCanvas.cpp  OpenGLCanvas.h  OpenGLHAL.cpp  OpenGLHAL.h  OpenGLHALSignalProcessing.cpp  OpenGLHALSignalProcessing.h  PAAudio.cpp  PAAudio.h  PortAudioHAL.cpp  PortAudioHAL.h
libemulator/: AERamWorksIII.cpp  AERamWorksIII.h  AETimeMasterIIHO.cpp  AETimeMasterIIHO.h  AETransWarp.cpp  AETransWarp.h  AETransWarpGS.cpp  AETransWarpGS.h  Apple35FloppyDiskDriveInterfaceCard.cpp  Apple35FloppyDiskDriveInterfaceCard.h  AppleDiskII13SectorInterfaceCard.cpp  AppleDiskII13SectorInterfaceCard.h  AppleDiskII16SectorInterfaceCard.cpp  AppleDiskII16SectorInterfaceCard.h  AppleGraphicsTabletInterfaceCard.cpp  AppleGraphicsTabletInterfaceCard.h  AppleIIAnnunciators.cpp  AppleIIAnnunciators.h  AppleIIBitRenderer.cpp  AppleIIBitRenderer.h  AppleIICharacterSetController.cpp  AppleIICharacterSetController.h  AppleIIEventController.cpp  AppleIIEventController.h  AppleIIGSADB.cpp  AppleIIGSADB.h  AppleIIGSDOC.cpp  AppleIIGSDOC.h  AppleIIGSIWM.cpp  AppleIIGSIWM.h  AppleIIGSMemory.cpp  AppleIIGSMemory.h  AppleIIGSROM.cpp  AppleIIGSROM.h  AppleIIGSSCC.cpp  AppleIIGSSCC.h  AppleIIHostSmartPort.cpp  AppleIIHostSmartPort.h  AppleIIIOU.cpp  AppleIIIOU.h  (+117 more)
libntsc/: appleII.c  appleII.h  ntsc.c  ntsc.h  ntsc1Bit.c  ntsc1Bit.h  ntsc2Bit.c  ntsc2Bit.h  ntscAppleII.c  ntscAppleII.h  ntscCGA.c  ntscCGA.h  ntscSignalProcessing.c  ntscSignalProcessing.h  signalProcessing.c  signalProcessing.h
libutil/: util.cpp  util.h
macosx/: ActionMenuButton.h  ActionMenuButton.m  AppController.h  AppController.m  Application.h  Application.m  AudioController.h  AudioController.m  AudioControlsWindowController.h  AudioControlsWindowController.m  AudioControlsWindowController.mm  BackgroundView.h  BackgroundView.m  CanvasPrintView.h  CanvasPrintView.m  CanvasToolbarView.h  CanvasToolbarView.m  CanvasView.h  CanvasView.mm  CanvasViewController.h  CanvasViewController.mm  CanvasWindow.h  CanvasWindow.m  CanvasWindow.mm  CanvasWindowController.h  CanvasWindowController.m  ChooserBackgroundView.h  ChooserBackgroundView.m  ChooserCell.h  ChooserCell.m  ChooserController.h  ChooserController.mm  ChooserItem.h  ChooserItem.m  ChooserOutlineCell.h  ChooserOutlineCell.m  ChooserViewController.h  ChooserViewController.m  ConnectorViewController.h  ConnectorViewController.m  (+120 more)
rom/: AE TransWarp GS 1.8S.rom  Apple II.rom  Laser 128 ROM.bin.cpgz  Orange Micro Grappler plus Printer Interface 3.2.rom  Videx Videoterm Video US Inverse.rom
sdl2/: SDLMain.m
src/: OEDebugger.cpp  OEDebugger.h  OEDeviceState.cpp  OEDeviceState.h  OEEmulationController.cpp  OEEmulationController.h  OEGL.cpp  OEGL.h  OEHID.cpp  OEHID.h  OEOpenGLCanvas.cpp  OEOpenGLCanvas.h  OEOpenGLCanvasController.cpp  OEOpenGLCanvasController.h  OEPA.cpp  OEPA.h  OEPAEmulation.cpp  OEPAEmulation.h  OEPortAudio.cpp  OEPortAudio.h  OEPortAudioEmulation.cpp  OEPortAudioEmulation.h  OEStorage.cpp  OEStorage.h
templates/: Acorn System 1.xml  Apple Disk II Interface Card.xml  (+15 more)
(+847 files in other folders)
